--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "handlebars": "^4.0.6",
+    "http-server": "^0.10.0",
     "jquery": "^3.2.1",
     "navigo": "^4.6.2",
     "systemjs": "^0.20.12",
