--- a/public/package.json
+++ b/public/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "firebase": "^3.9.0",
     "handlebars": "^4.0.6",
     "http-server": "^0.10.0",
     "jquery": "^3.2.1",
