--- a/public/package.json
+++ b/public/package.json
@@ -18,6 +18,7 @@
     "systemjs": "^0.20.12",
     "systemjs-plugin-babel": "0.0.21",
     "tablesorter": "^2.28.8",
+    "techan": "^0.8.0",
     "toastr": "^2.1.2"
   }
 }
