--- a/public/package.json
+++ b/public/package.json
@@ -10,11 +10,15 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "chai": "^3.5.0",
     "firebase": "^3.9.0",
     "handlebars": "^4.0.6",
     "http-server": "^0.10.0",
     "jquery": "^3.2.1",
+    "mocha": "^3.3.0",
     "navigo": "^4.6.2",
+    "sinon": "^2.2.0",
+    "sinon-chai": "^2.10.0",
     "systemjs": "^0.20.12",
     "systemjs-plugin-babel": "0.0.21",
     "tablesorter": "^2.28.8",
